# fastfish-format

./: .gitignore  README.md  manifest.yaml  pyproject.toml  requirements.txt
fastfish_format/: __init__.py  api.py  cli.py  image_utils.py  render.py  template.py  typography.py
fastfish_format/assets/styles/: mweb-ayu.css  mweb-bear-default.css  mweb-contrast.css  mweb-duotone-heat.css  mweb-duotone-light.css  mweb-gandalf.css  mweb-indigo.css  mweb-lark.css  mweb-red-graphite.css  mweb-smartblue.css  mweb-solarized-light.css  mweb-typo.css  mweb-v-green.css
fastfish_format/channels/: __init__.py  wechat.py  xhs.py
fastfish_format/illustrators/: __init__.py  workflow.py
openclaw-skill/: SKILL.md
scripts/: ffformat_cli.py
